docs(api): add docs for auth controllers
