# router/api/v1/api.go
@@ -4,6 +4,8 @@ import (
 	"fmt"
 
 	"github.com/TechMinerApps/upmaster/modules/oauth"
+	"github.com/TechMinerApps/upmaster/router/api/v1/auth"
+	"github.com/TechMinerApps/upmaster/router/api/v1/endpoints"
 	"github.com/TechMinerApps/upmaster/router/api/v1/status"
 	"github.com/gin-gonic/gin"
 )
@@ -21,8 +23,30 @@ func SetupRouter(c Config, router *gin.Engine) error {
 	}
 	oauthAPI.RegisterRoute(oauthSubrouter)
 
-	statusAPI := router.Group("/status/")
-	statusAPI.POST("/:endpoint_id/", status.WriteEndpointStatus)
+	router.POST("/status", status.WriteEndpointStatus)
+
+	authAPI := router.Group("auth")
+	{
+		authAPI.POST("/auth/login", auth.Login)
+		authAPI.DELETE("/auth/logout", auth.Logout)
+		authAPI.POST("/auth/reset", auth.SendResetToken)
+		authAPI.PUT("/auth/reset", auth.ResetPassword)
+	}
+
+	endpointsAPI := router.Group("endpoints")
+	{
+		endpointsAPI.GET("", endpoints.Index)
+		endpointsAPI.POST("", endpoints.Store)
+		endpointsAPI.PUT("/:id", endpoints.Update)
+		endpointsAPI.DELETE("/:id", endpoints.Destroy)
+	}
+
+	usersAPI := router.Group("users")
+	{
+		usersAPI.GET("", users.Index)
+		usersAPI.PUT("/:username", users.Update)
+		usersAPI.DELETE("/:username", users.Destroy)
+	}
 
 	return nil
 }
